--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -27,13 +28,18 @@
                     </div>
                 </p>
             </div>
+             <div class="mobile-bar"><i class="fa fa-bars fa-lg"></i></div>
         </nav>
         <section>
             <div class="right-sec">
                 <h1>Interior Design That <br> Care About Details</h1>
                 <button>Learn More</button>
             </div>
-            <div>
+
+            <div class="card-sec">
+  
+
+            <div class="card1">
                 <div class="glass1">
                 <div class="icon">
                 <img src="/images/light.png" alt="light">
@@ -44,7 +50,7 @@
             </div>
 
 
-            <div>
+            <div class="card2">
                 <div class="glass2">
                 <div class="icon">
                 <img src="/images/bed.png" alt="light">
@@ -54,7 +60,7 @@
             <div class="line2"></div>
             </div>
 
-
+        </div>
            
         </section>
     </main>
